deploy/retrieveUnpackaged/objects/PM_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Is_Phased_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Phased Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PM Quotes</relationshipLabel>
        <relationshipName>PM_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PM_Contract_Length__c</fullName>
        <label>PM Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Delayed_Deployment__c</fullName>
        <label>PM Delayed Deployment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Discount__c</fullName>
        <label>PM Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PM_MRR__c</fullName>
        <label>PM MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_One_Time_Fee__c</fullName>
        <label>PM One-Time Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PM_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Quote_Id__c</fullName>
        <label>PM Quote Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Setup_Fee__c</fullName>
        <label>PM Setup Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Silver_Bullet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Silver Bullet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Deal</label>
        <type>Checkbox</type>
    </fields>
    <label>PM Quote</label>
    <nameField>
        <label>PM Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PM Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>